fix(index.txt): colored output in the build script was ignored

--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -54,14 +54,14 @@ const t = useTranslation(lang);
             <Link
               iconName="github"
               text="Github"
-              href="https://github.com/henmalib"
+              href="https://henmalib.dev/github"
               shortlink="@henmalib"
             />
 
             <Link
               iconName="leetcode"
               text="leetcode"
-              href="https://leetcode.com/u/henmalib"
+              href="https://henmalib.dev/leetcode"
               shortlink="henmalib"
             />
 
@@ -75,35 +75,35 @@ const t = useTranslation(lang);
             <Link
               iconName="telegram"
               text="Telegram"
-              href="https://t.me/henmalib"
+              href="https://henmalib.dev/telegram"
               shortlink="@henmalib"
             />
 
             <Link
               iconName="steam"
               text="Steam"
-              href="https://steamcommunity.com/profiles/76561198276842908"
+              href="https://henmalib.dev/steam"
               shortlink="henmalib"
             />
 
             <Link
               iconName="monkeytype"
               text="Monkeytype"
-              href="https://monkeytype.com/profile/henmalib"
+              href="https://henmalib.dev/monkeytype"
               shortlink="henmalib"
             />
 
             <Link
               iconName="wakatime"
               text="Wakatime"
-              href="https://wakatime.com/@henmalib"
+              href="https://henmalib.dev/wakatime"
               shortlink="henmalib"
             />
 
             <Link
               iconName="lastfm"
               text="Last.fm"
-              href="https://www.last.fm/user/Simidzu"
+              href="https://henmalib.dev/lastfm"
               shortlink="Simidzu"
             />
           </ul>
