--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -50,12 +50,13 @@ const t = useTranslation(lang);
         <h4>{t('connect')}</h4>
 
         <div class="flex flex-col gap-2">
-          <ul class="flex flex-col mt-2 gap-2">
+          <ul class="flex flex-col mt-2 gap-1.5">
             <Link
               iconName="github"
               text="Github"
               href="https://henmalib.dev/github"
               shortlink="@henmalib"
+              lineColor="#57606a"
             />
 
             <Link
@@ -63,6 +64,7 @@ const t = useTranslation(lang);
               text="leetcode"
               href="https://henmalib.dev/leetcode"
               shortlink="henmalib"
+              lineColor="#fd9d18"
             />
 
             <Link
@@ -70,6 +72,7 @@ const t = useTranslation(lang);
               text="Discord"
               href="https://discordapp.com/users/279266228151779329"
               shortlink="@henmalib"
+              lineColor="#161cbc"
             />
 
             <Link
@@ -77,6 +80,7 @@ const t = useTranslation(lang);
               text="Telegram"
               href="https://henmalib.dev/telegram"
               shortlink="@henmalib"
+              lineColor="#25a3e1"
             />
 
             <Link
@@ -84,6 +88,7 @@ const t = useTranslation(lang);
               text="Steam"
               href="https://henmalib.dev/steam"
               shortlink="henmalib"
+              lineColor="#fff"
             />
 
             <Link
@@ -91,6 +96,7 @@ const t = useTranslation(lang);
               text="Monkeytype"
               href="https://henmalib.dev/monkeytype"
               shortlink="henmalib"
+              lineColor="#e2b714"
             />
 
             <Link
@@ -98,6 +104,7 @@ const t = useTranslation(lang);
               text="Wakatime"
               href="https://henmalib.dev/wakatime"
               shortlink="henmalib"
+              lineColor="#fff"
             />
 
             <Link
@@ -105,6 +112,15 @@ const t = useTranslation(lang);
               text="Last.fm"
               href="https://henmalib.dev/lastfm"
               shortlink="Simidzu"
+              lineColor="#d92323"
+            />
+
+            <Link
+              iconName="coffee"
+              text="Buymeacoffee"
+              href="https://buymeacoffee.com/henmalib"
+              shortlink="henmalib"
+              lineColor="#ffdd00"
             />
           </ul>
         </div>
