feat(link): updated link, added coffee to index.txt

--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -118,7 +118,7 @@ const t = useTranslation(lang);
             <Link
               iconName="coffee"
               text="Buymeacoffee"
-              href="https://buymeacoffee.com/henmalib"
+              href="https://henmalib.dev/coffee"
               shortlink="henmalib"
               lineColor="#ffdd00"
             />
